Exploring React's createElement API

--- a/01-document-create-element.html
+++ b/01-document-create-element.html
@@ -5,7 +5,14 @@
   <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
   <script type="text/babel">
     const rootElement = document.getElementById('root')
-    const element = 
+    const element = React.createElement('div', 
+        {
+        className: 'container',
+        children: React.createElement('span', null, 'Mohammed', ' Zeeshan')
+        },
+  
+      )
+      console.log(element);
     ReactDOM.render(element, rootElement)
   </script>
 </body>
