--- a/05.1-Reusing-React-Component-Explained.html
+++ b/05.1-Reusing-React-Component-Explained.html
@@ -5,13 +5,13 @@
   <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
   <script type="text/babel">
     function Welcome(props) {
-      return <h1>Assalamu 'alaikum, {props.name}</h1>;
+      return <h1>Hola!, {props.name}</h1>;
     }
 
     function App() {
       return (
         <div>
-          <Welcome name="Mohammed" />
+          <Welcome name="Zeeshan" />
           <Welcome name="Haneef" />
           <Welcome name="Thahira" />
         </div>
